--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -77,38 +77,43 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    
-    - name: Build and push Controller Service
+    - name: Build Controller Service
       uses: docker/build-push-action@v4
       with:
         context: ./controller
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/microservices-controller:latest
+        push: false
+        tags: microservices-controller:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
     
-    - name: Build and push Catalog Service
+    - name: Build Catalog Service
       uses: docker/build-push-action@v4
       with:
         context: ./model
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/microservices-catalog:latest
+        push: false
+        tags: microservices-catalog:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
     
-    - name: Build and push Frontend
+    - name: Build Frontend
       uses: docker/build-push-action@v4
       with:
         context: ./frontend
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/microservices-frontend:latest
+        push: false
+        tags: microservices-frontend:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
+    
+    - name: Save Docker Images
+      run: |
+        echo "📦 Docker Images Built Successfully"
+        echo "=================================="
+        echo "✅ microservices-controller:latest"
+        echo "✅ microservices-catalog:latest" 
+        echo "✅ microservices-frontend:latest"
+        echo ""
+        echo "🚀 Images ready for deployment!"
+        echo "💡 In production, these would be pushed to a registry"
 
   deploy:
     needs: build-and-push
@@ -123,17 +128,22 @@ jobs:
         echo "🚀 Deployment Pipeline"
         echo "====================="
         echo "✅ Build completed successfully"
-        echo "✅ Images pushed to registry"
+        echo "✅ Docker images built locally"
         echo ""
         echo "📋 Deployment Steps (Simulated):"
         echo "1. Connect to production server"
-        echo "2. Pull latest images from registry"
-        echo "3. Update docker-compose.yml with new versions"
-        echo "4. Restart services with zero-downtime"
+        echo "2. Transfer docker-compose.yml and images"
+        echo "3. Run 'docker-compose up --build -d'"
+        echo "4. Verify all services are running"
         echo "5. Run health checks on all endpoints"
         echo "6. Verify CORS configuration"
         echo "7. Test authentication flow"
         echo "8. Monitor application metrics"
         echo ""
         echo "🎉 Deployment completed successfully!"
-        echo "🌐 Application available at: https://your-domain.com"
+        echo "🌐 Application available at: http://localhost:3000"
+        echo ""
+        echo "📝 For production deployment:"
+        echo "- Set up Docker registry (Docker Hub, AWS ECR, etc.)"
+        echo "- Configure secrets: DOCKER_USERNAME, DOCKER_PASSWORD"
+        echo "- Update push: false to push: true in workflow"
