--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -74,6 +74,34 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+    
+    - name: Cache Maven dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+    
+    - name: Fix Maven Wrapper Permissions
+      run: |
+        chmod +x controller/mvnw
+        chmod +x model/mvnw
+    
+    - name: Build Controller Service JAR
+      run: |
+        cd controller
+        ./mvnw clean package -DskipTests
+    
+    - name: Build Catalog Service JAR
+      run: |
+        cd model
+        ./mvnw clean package -DskipTests
+    
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     
